feat(search): support `LocalDate` and `LocalDateTime` properties in timestamp paths